--- a/deep-learning.html
+++ b/deep-learning.html
@@ -52,7 +52,7 @@ and Computer Vision to join us in our commitment to improve the quality of care?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2F72BBA2CC'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/2F72BBA2CC'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -178,7 +178,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Speech and Language Processing)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -195,7 +195,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/paperspace/a3633631-f68f-487d-82cb-7376265696f2'>Paperspace - Deep Learning Technical Writer (project based)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/paperspace/a3633631-f68f-487d-82cb-7376265696f2'>Paperspace - Deep Learning Technical Writer (project based)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
@@ -316,7 +316,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-05-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/oHb49fwP'>Logitech Careers - Automated Visual Inspection Intern with Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/oHb49fwP'>Logitech Careers - Automated Visual Inspection Intern with Deep Learning</a></h5> 
 <p><span class="badge badge-light">Hsinchu</span></p>
 <p>Posted on: 2019-05-14</p>
 <hr/>
@@ -440,7 +440,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615738/'>Deep Learning Engineer, Core Modeling in Lviv | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615738/'>Deep Learning Engineer, Core Modeling in Lviv | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
